# vloxximity

./: Cargo.toml  README.md  release-please-config.json  release-plz.toml
.github/workflows/: build-release.yml  ci.yml  release.yml
client/: CHANGELOG.md  Cargo.toml
client/src/: lib.rs  nexus_logger.rs
client/src/audio/: capture.rs  codec.rs  mod.rs  playback.rs  spatial.rs  thread.rs  vad.rs
client/src/network/: mod.rs  protocol.rs  signaling.rs  ws.rs
client/src/position/: mod.rs  mumble_link.rs  transform.rs
client/src/ui/: mod.rs  settings.rs  speaking_indicator.rs
client/src/voice/: active_speak.rs  auto_rooms.rs  group.rs  manager.rs  mixer.rs  mod.rs  network.rs  peer.rs  persist.rs  room_type.rs  types.rs
client/src/voice/persist/: mod.rs  mutes.rs  settings.rs
server/: CHANGELOG.md  Cargo.toml
server/src/: gw2.rs  limits.rs  main.rs  protocol.rs  rate_limit.rs  rooms.rs  session.rs  signaling.rs  squad.rs  sweeper.rs  test_peer.rs  wvw.rs
server/src/rooms/: tests.rs
server/src/session/: tests.rs
server/src/squad/: tests.rs
