[package]
name = "vloxximity-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vloxximity-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent collections
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# TURN credential generation
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Audio codec for server-side fake player
mousiki = "0.2"

# GW2 REST API client (account-name validation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
