[package]
name = "vloxximity-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vloxximity-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent collections
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# GW2 API key cache key derivation
sha2 = "0.10"

# Audio codec for server-side fake player
mousiki = "0.2"

# GW2 REST API client (account-name validation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
